# generative-ai-projects

./: LICENSE
GenLinkAI/: README.md  clean_json.py  few_shot.py  llm_helper.py  main.py  post_generator.py  preprocess.py  pyproject.toml
GenLinkAI/Data/: cleaned_posts.json  processed_posts.json  raw_posts.json
