[project]
name = "linkedcraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain==0.2.14",
    "langchain-community==0.2.12",
    "langchain-core==0.2.39",
    "langchain-groq==0.1.9",
    "pandas==2.0.2",
    "streamlit==1.35.0",
]
